@@ -55,8 +55,26 @@ class MS_Model_Upgrade extends MS_Model {
 
 		// Compare current src version to DB version
 		if ( version_compare( MS_Plugin::instance()->version, $settings->version, '!=' ) ) {
+
+			/*
+			 * ----- General update logic, executed on every update ------------
+			 */
+
+			do_action( 'ms_model_upgrade_before_update', $settings );
+
 			// Every time the plugin is updated we clear the cache.
 			MS_Factory::clear();
+
+			// Create missing Membership pages.
+			$ms_pages = MS_Factory::load( 'MS_Model_Pages' );
+			$ms_pages->create_missing_pages();
+
+			// Note: We do not create menu items on upgrade! Users might have
+			// intentionally removed the items from the menu...
+
+			/*
+			 * ----- Version-Specific update logic -----------------------------
+			 */
 
 			// Upgrade logic from 1.0.0.0
 			if ( version_compare( '1.0.0.0', $settings->version, '=' ) ) {
@@ -72,13 +90,24 @@ class MS_Model_Upgrade extends MS_Model {
 				}
 			}
 
-			$settings = MS_Factory::load( 'MS_Model_Settings' );
+			/*
+			 * ----- General update logic, executed on every update ------------
+			 */
+
 			$settings->version = MS_Plugin::instance()->version;
 			$settings->save();
 
-			do_action( 'ms_model_upgrade_upgrade', $settings );
+			// Display a message after the page is reloaded.
+			$msg = sprintf(
+				__( 'Protected Content was updated to version %1$s!' , MS_TEXT_DOMAIN ),
+				$settings->version
+			);
+			WDev()->message( $msg );
 
-			MS_Plugin::flush_rewrite_rules(); // This will reload the current page
+			do_action( 'ms_model_upgrade_after_update', $settings );
+
+			// This will reload the current page.
+			MS_Plugin::flush_rewrite_rules();
 		}
 	}
 
