@@ -6,6 +6,7 @@ Change Log:
 
 1.0.4.6
 ----------------------------------------------------------------------
+- Fix problems with plugin settings after upgrading
 
 1.0.4.5
 ----------------------------------------------------------------------
